types.h

void gen_all_preflop_types(struct gameinfo *info, float *types);
void gen_types_for_flop(struct gameinfo *info, float *types, int flop);
void gen_types_for_turn(struct gameinfo *info, float *types, int flop, int turn);
void gen_single_river_type(struct gameinfo *info, float *type, int flop, int turn, int river, int hand);
void gen_random_turn_type(struct gameinfo *info, float *type);
void gen_random_river_type(struct gameinfo *info, float *type);
void get_slots_for_river(struct gameinfo *info, short int *slots, int flop, int turn, int river);
short int get_slots_wtl_stats_for_river(struct gameinfo *info, struct wtl_f *wtl_stats, int flop, int turn, int river);
float try_new_type(float *types, float *diffs, float *t, int n_types, int n_slots_per_type, float smallest, int replace_i);
float get_difference(float *t1, float *t2, int n_slots);
float get_difference_pow2(float *t1, float *t2, int n_slots);
float calc_diffs(float *types, float *diffs, int n_types, int n_slots_per_type, int t);
void calc_diffs_for_one_type(float *types, float *type, float *diff, int n_types, int n_slots_per_type);
short int get_slot(float *types, float *t, int n_types, int n_slots_per_type);
void get_slots_for_all(short int *slots, float *slot_types, float *types, int n_slots, int n_types, int n_slots_per_type);
float get_closest_match(float *diffs, int n_types, int *t1, int *t2);
void generate_mapping_from_diffs(float *diffs, int *mapping, int n_types, int reduce_to);
void gen_board_type(struct gameinfo *info, float *bt, int gs, int flop, int turn, int river);
//float get_avg_diff(float *diff, int n_types);
//short int get_slot(float *types, float *t, int n_types, int n_slots_per_type);
void find_two_smallest(float *diffs, short int *diffs_order, int n_diff, int new_type);
void add_values_to_gs_switch_and_odds(float *switch_table, float *odds_table, short int *hss, short int *hse, int types_end);
void add_action_to_hi(struct hand_info *hi, int action);
struct hand_info *get_blank_hi(struct unique_root *us);
int16_t get_potsize_slot_from_hi(struct type_type *t, struct hand_info *hi);
int16_t get_last_act_slot_from_hi(struct type_type *t, struct hand_info *hi);
int16_t get_bets_slot_from_hi(struct type_type *t, struct hand_info *hi);
int16_t get_board_slot_from_hi(struct type_type *t, struct hand_info *hi);
int16_t get_hand_slot_from_hi(struct type_type *t, struct hand_info *hi);
struct unique_root *set_mutable_types_from_path(int16_t *types, char *path, int path_len, struct unique_root *r);