queue.h

struct queue
{
  pthread_mutex_t mutex;
  pthread_cond_t  condition_var;
  struct queue_item *first;
  struct queue_item *last;
  int items;
};
struct zp_queue
{
  pthread_mutex_t mutex;
  pthread_cond_t  condition_var;
  int n_items;
  int size;
  struct zp_queue_item *items;
};
struct queue *queue_init();
int queue_get_item_count(struct queue *q);
int queue_lock(struct queue *q);
void queue_unlock(struct queue *q);
int zp_queue_get_item_count(struct zp_queue *q);
int zp_queue_lock(struct zp_queue *q);
void zp_queue_unlock(struct zp_queue *q);