plrmodel.h

int count_pmn(struct plrmodel_node *n);
struct plrmodel_node *gen_minimal_plrmodel_tree(struct gameinfo *info, struct unique_root *root, uint64_t timestamp);
void print_plrmodel_tree(struct plrmodel_node *n, int tabs);
struct plrmodel_node *load_plrmodel_tree(struct gameinfo *info, int fileno, struct unique_root *u);